feat: update now all code is implemented, but hasnt been check, no after remenber check all

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-DB_HOST=portafolio-db.cwb6o264cnfl.us-east-1.rds.amazonaws.com
-DB_USER=admin
-DB_PASS=TuContraseñaSuperSegura
-DB_NAME=portafoliodb
-PORT=4000
+DB_HOST=name.code.region-rds.amazonaws.com
+DB_USER=user
+DB_PASS=pasword
+DB_NAME=dbname
+PORT=2000
+JWT_SECRET=jwttoken
+REFRESH_SECRET=refershtoken
