feat upodate added the hability to verify user

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_NAME=dbname
 PORT=2000
 JWT_SECRET=jwttoken
 REFRESH_SECRET=refershtoken
+SMTP_HOST=email-smtp.us-east-1.amazonaws.com
+SMTP_PORT=587
+SMTP_USER=ASDHJASJDHAJKSDDJLAS     # <-- tu SMTP user
+SMTP_PASS=BkI4VQF...WZrGj         # <-- tu SMTP password
+
+APP_URL=https://lhghdq2r-5173.use.devtunnels.ms/    # o tu dominio del frontend
