--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "mysql2": "^3.9.7",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "serverless-http": "^4.0.0"
+  },
+  "devDependencies": {
+    "serverless": "^4.29.3"
   }
 }
