--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node src/index.js"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -18,6 +18,7 @@
     "serverless-http": "^4.0.0"
   },
   "devDependencies": {
-    "serverless": "^4.29.3"
+    "serverless": "^4.29.3",
+    "serverless-esbuild": "^1.57.0"
   }
 }
