--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "node src/index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.966.0",
+    "@aws-sdk/client-dynamodb": "^3.966.0",
+    "@aws-sdk/lib-dynamodb": "^3.966.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
