--- a/serverless.yml
+++ b/serverless.yml
@@ -25,12 +25,12 @@ provider:
     SMTP_PASS: ${env:SMTP_PASS}
     
     APP_URL: ${env:APP_URL}
-    
+
     WS_MANAGEMENT_ENDPOINT: ${env:WS_MANAGEMENT_ENDPOINT}
 
 
     # ✅ DynamoDB table para conexiones WS (por stage)
-    WS_CONNECTIONS_TABLE: ws_connections_${self:provider.stage}
+    WS_CONNECTIONS_TABLE: ws_connections_v2_${self:provider.stage}
 
   # ✅ Permisos necesarios para:
   # - Guardar/borrar/query en Dynamo
@@ -46,7 +46,7 @@ provider:
             - dynamodb:GetItem
             - dynamodb:UpdateItem
           Resource:
-            - arn:aws:dynamodb:${self:provider.region}:*:table/ws_connections_${self:provider.stage}
+            - arn:aws:dynamodb:${self:provider.region}:*:table/ws_connections_v2_${self:provider.stage}
 
         - Effect: Allow
           Action:
@@ -117,19 +117,19 @@ resources:
     WsConnectionsTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: ws_connections_${self:provider.stage}
+        TableName: ws_connections_v2_${self:provider.stage}
         BillingMode: PAY_PER_REQUEST
 
         AttributeDefinitions:
-          - AttributeName: userId
+          - AttributeName: pk
             AttributeType: S
-          - AttributeName: connectionId
+          - AttributeName: sk
             AttributeType: S
 
         KeySchema:
-          - AttributeName: userId
+          - AttributeName: pk
             KeyType: HASH
-          - AttributeName: connectionId
+          - AttributeName: sk
             KeyType: RANGE
 
         TimeToLiveSpecification:
