--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -22,9 +22,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Serverless Framework v3
-        run: npm install -g serverless@3
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -33,7 +30,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy to AWS (prod)
-        run: serverless deploy --stage prod
+        run: npx serverless deploy --stage prod
         env:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_USER: ${{ secrets.DB_USER }}
@@ -51,4 +48,3 @@ jobs:
 
           APP_URL: ${{ secrets.APP_URL }}
           WS_MANAGEMENT_ENDPOINT: ${{ secrets.WS_MANAGEMENT_ENDPOINT }}
-
