--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "todo-backend-mysql",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "tsx watch src/index.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@aws-sdk/client-apigatewaymanagementapi": "^3.966.0",
@@ -21,7 +22,19 @@
     "serverless-http": "^4.0.0"
   },
   "devDependencies": {
-    "serverless": "^4.29.3",
-    "serverless-esbuild": "^1.57.0"
+    "@types/aws-lambda": "^8.10.159",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.0.9",
+    "@types/nodemailer": "^7.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
+    "eslint": "^9.39.2",
+    "serverless": "^4.0.0",
+    "serverless-esbuild": "^1.57.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
