feat: change format

--- a/serverless.yml
+++ b/serverless.yml
@@ -80,7 +80,7 @@ custom:
     bundle: true
     platform: node
     target: node20
-    format: esm
+    format: cjs
     sourcemap: true
     tsconfig: tsconfig.json
     external:
